<resources>
    <string name="app_name">Trivia Quiz Game App</string>
    <string name="title">Trivia</string>
    <string name="true_text">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="true_title">true</string>
    <string name="false_title">false</string>
    <string name="next_button">next button</string>
    <string name="previous_button">previous button</string>
    <string name="counter_questions">0 out of 100</string>
    <string name="correct_answer">Correct</string>
    <string name="wrong_answer">Wrong</string>
</resources>
